Delete has been implemented

--- a/pizzaapp/templates/base.html
+++ b/pizzaapp/templates/base.html
@@ -2,6 +2,16 @@
 <html>
 <head>
 	<title></title>
+
+	 <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <style type="text/css">
+    	.good {background-color: #0c0;}
+    	.moderate {background-color: #FFFF00 }
+    </style>
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
