--- a/pizzaapp/templates/adminhomepage.html
+++ b/pizzaapp/templates/adminhomepage.html
@@ -16,6 +16,7 @@
 	    <tr>
 	      <th scope="col">Pizza Name</th>
 	      <th scope="col">Pizza Price</th>
+	       <th scope="col">Action</th>
 	    </tr>
 	  </thead>
 	  <tbody>
@@ -23,10 +24,21 @@
 		  	<tr>
 		      <th scope="row">{{pizza.pizzaName}}</th>
 		      <td>{{pizza.pizzaPrice}}</td>
+		      <td><a href="{% url 'deletepizza' pizza.id %}" class="btn btn-danger">Delete</a></td>
 		 
 		    </tr>
 	  	{% endfor %}
 	    
 	  </tbody>
 </table>
+<br/>
+<br/>
+{%for message in messages %}
+		<div class="alert alert-danger alert-dismissable" role="alert">
+			<button class="close" data-dismiss="alert">
+				<small><sup>x</sup></small>
+			</button>
+			{{ message }}
+		</div>
+{% endfor %}
 {% endblock%}
