cutomer pages added

--- a/pizzaapp/templates/base.html
+++ b/pizzaapp/templates/base.html
@@ -5,14 +5,11 @@
 
 	 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <style type="text/css">
-    	.good {background-color: #0c0;}
-    	.moderate {background-color: #FFFF00 }
-    </style>
+  
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -24,20 +21,32 @@
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active">
-	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">Link</a>
+	        <a class="nav-link" href="/">Link</a>
 	      </li>
 	    </ul>
 	    {% if showLogoutButton %}
-		    <form class="form-inline my-2 my-lg-0">
-		        <a class="btn btn-danger my-2 my-sm-0" href="{% url 'logoutadmin'%}" >Logout</a>
-		    </form>
+	    	{% if isAdmin %}
+			    <form class="form-inline my-2 my-lg-0">
+			        <a class="btn btn-danger my-2 my-sm-0" href="{% url 'logoutadmin'%}" >Logout</a>
+			    </form>
+			{% else %}
+				<form class="form-inline my-2 my-lg-0">
+			        <a class="btn btn-danger my-2 my-sm-0" href="{% url 'logoutuser'%}" >Logout</a>
+			    </form>
+			{% endif %}
 	    {% else %}
-	     	<form class="form-inline my-2 my-lg-0">
-		        <a class="btn btn-danger my-2 my-sm-0" style="visibility: hidden;" href="{% url 'logoutadmin'%}" >Logout</a>
-		    </form>
+	    	{% if isAdmin %}
+		     	<form class="form-inline my-2 my-lg-0">
+			        <a class="btn btn-danger my-2 my-sm-0" style="visibility: hidden;" href="{% url 'logoutadmin'%}" >Logout</a>
+			    </form>
+			 {% else %}   
+			    <form class="form-inline my-2 my-lg-0">
+			        <a class="btn btn-danger my-2 my-sm-0" href="{% url 'userlogin'%}" >Login</a>
+			    </form>
+			{% endif %}
 	    {% endif %}
 	  </div>
 	</nav>
