--- a/pizzaapp/templates/customerpage.html
+++ b/pizzaapp/templates/customerpage.html
@@ -30,7 +30,7 @@
 				  	<tr>
 				      <th scope="row">{{pizza.pizzaName}}</th>
 				      <td>{{pizza.pizzaPrice}}</td>
-				      <td><input type="number" name="{{pizza.id}}"  value ="0" style="width: 60px"></td>
+				      <td><input type="number" name="{{pizza.id}}"  value ="0"  min ="0" style="width: 60px"></td>
 				 
 				    </tr>
 			  	{% endfor %}
